# NM_Labs

./: pyproject.toml
nm_lab_1/: input(2).txt  main.py  output.txt
nm_lab_2/: main.py  output2.txt
nm_lab_3/: input_1.txt  input_2.txt  main.py  output_.txt
nm_lab_4/: init.py  main.py  metod_vrasheniya20.py  pom.py  іі.py
nm_lab_5/: main.py
