[tool.poetry]
name = "nm-labs"
version = "0.1.0"
description = ""
authors = ["Andrew Makar <makarandrew894@gamil.com>"]
readme = "README.md"
packages = [{include = "nm_labs"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
